fix global styles and fix lamp width on mobile screens

--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -2,6 +2,15 @@
 @tailwind components;
 @tailwind utilities;
 
+/* css reset */
+
+* {
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
+  -webkit-tap-highlight-color: transparent;
+}
+
 /* customised scrollbar */
 
 @layer utilities {
